* Parameter "title" of "sjp.int" now accepts a character vector of same length as interaction terms, with one title character string for each interaction plot plotted.
* Parameter "moderatorValues" in "sjp.int" has two new options "zeromax" and "quart" for chosing the moderator values.

Changes to functions:
* "sjp.lmer" now calculates approximate p-values based on Wald chi-squared tests.
* "sjp.glm" now supports plotting "logistf" objects.
* "sjp.glmm" and "sjp.lmm" now also accept a list of fitted models (see examples in ?sjp.glmm and ?sjp.lmm).
* "sjp.int" and "sjp.lm" now support "plm" objects (from plm-package).
* Parameter "transformTicks" in "sjp.glm" and "sjp.glmm" now defaults to "TRUE".
* Added further pre-set themes to "sjp.setTheme".
* Minor improvements of "sjp.setTheme".

Bug fixes:
* "sjp.int" did not work for interaction terms of factors with more than two levels in mixed effects models ("merMod"-objects) - fixed.
* "sjp.glm" and "sjp.glmm" should catch axis limits, which are out of printable bounds, hence these function should no longer stop in such cases.
* "sjp.lmer" and "sjp.glmer" wrongly stated that paramter "ri.nr" was out of bound when "type" was "re", "fe.ri" or "ri.pc" - fixed.
* Weights with decimals in "sjt.xtab" (e.g. "weightBy = abs(rnorm(100, 2, 1)") caused an error - fixed.
* "sjp.int" did not work with interaction terms that used "AsIs" conversion (function "I") - fixed.


Version 1.7
------------------------------------------------------------------------------
General:
* Renamed sjs, sju, sjd and sji-functions into more intuitiv and shorter function names.
* "autoSetValueLabels" and "autoSetVariableLabels" are now a global option. E.g., use "options(autoSetValueLabels = FALSE)" to turn off automatic value label detection in plotting and table functions, or "options(autoSetValueLabels = TRUE)" to turn on automatic label detection.